ui: Fixed some UI alignment issues on the Dashboard.

--- a/src/components/Calendar/Calendar.css
+++ b/src/components/Calendar/Calendar.css
@@ -37,3 +37,7 @@
 #Calendar > #calendar-header > #calendar-header-spacer {
     flex: 1;
 }
+
+#Calendar > #calendar-grid{
+    margin-top: 1em;
+}
