--- a/src/pages/Dashboard/Dashboard.css
+++ b/src/pages/Dashboard/Dashboard.css
@@ -23,6 +23,7 @@
 
 #Dashboard > #left-sidebar-container > #dashboard-teams-container {
   margin:1em;
+  margin-top: 0em;
 }
 
 #Dashboard > #left-sidebar-container > #dashboard-members-container {
